# scoobadoo

./: README.md  WebServer.py  engine.py  main.py  pyproject.toml
config/: configuration.yml
doc/: FunctionPresentation.pptx
frank_manager/: bring_to_life.py  camera_manager.py  engines_manager.py  hovering_manager.py  plot_manager.py  proximity_manager.py  pump_valve_manager.py  turn_manager.py
frank_venv/: pyvenv.cfg
neural_network/: cameraManager.py  detectedBlock.py
sensors_actuators/: camera.py  engine.py  proximity.py
utils/: config.py  web_server.py
