[tool.poetry]
name = "pentc-2024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <=3.12"
pyyaml = "^6.0.1"
rpi-gpio = "^0.7.1"
dotmap = "^1.3.30"
picamera2 = "^0.3.18"
opencv-python = "^4.10.0.84"
tflite-runtime = "^2.14.0"
opencv-contrib-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
